// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the sq version 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      Enterprise Edition
    </li>
    <li
      className="page-footer-menu-item"
    >
      footer.version_x.6.4-SNAPSHOT
    </li>
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://www.gnu.org/licenses/lgpl-3.0.txt"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.license
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://community.sonarsource.com/c/help/sq"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.community
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        to="/web_api"
      >
        footer.web_api
      </ForwardRef(Link)>
    </li>
  </ul>
</div>
`;

exports[`should not render the only logged in information 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://www.gnu.org/licenses/lgpl-3.0.txt"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.license
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://community.sonarsource.com/c/help/sq"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.community
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
  </ul>
</div>
`;

exports[`should render the only logged in information 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      Community Edition
    </li>
    <li
      className="page-footer-menu-item"
    >
      footer.version_x.1.0
    </li>
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://www.gnu.org/licenses/lgpl-3.0.txt"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.license
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <a
        href="https://community.sonarsource.com/c/help/sq"
        rel="noopener noreferrer"
        target="_blank"
      >
        footer.community
      </a>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        to="/web_api"
      >
        footer.web_api
      </ForwardRef(Link)>
    </li>
  </ul>
</div>
`;

exports[`should show the db warning message 1`] = `
<Alert
  display="inline"
  id="evaluation_warning"
  variant="warning"
>
  <p
    className="big"
  >
    footer.production_database_warning
  </p>
  <p>
    <InstanceMessage
      message="footer.production_database_explanation"
    />
  </p>
</Alert>
`;
